--- a/css/style.css
+++ b/css/style.css
@@ -773,19 +773,6 @@ body {
   margin-right: 31px;
 }
 
-.sec-heading::before {
-  content: "";
-  position: absolute;
-  left: 25%;
-  transform: translateX(-50%);
-  top: 75px;
-  width: 0;
-  height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 13px solid #c7c2c2;
-}
-
 .second-text {
   width: 90%;
   padding: 20px 20px;
@@ -965,19 +952,46 @@ footer ul li a {
 }
 
 #product {
-  margin-top: 30px;
-}
-#product .container {
-  border-top: 3px solid #b12322;
+  margin: 30px 0;
 }
 #product .container .product-wrapper {
+  border-top: 3px solid #b12322;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  border-left: 1px solid #dbd6d6;
+  border-bottom: 1px solid #dbd6d6;
+  border-right: 1px solid #dbd6d6;
 }
 #product .container .product-wrapper .product {
   border: 1px solid #dbd6d6;
   width: 19%;
+}
+#product .container .product-wrapper .product .product-wrap a {
+  width: 200px;
+  height: 240px;
+  margin-bottom: 14px;
+}
+#product .container .product-wrapper .product .product-wrap a img {
+  width: 100%;
+  height: 100%;
+}
+#product .container .product-wrapper .product .product-wrap .product-item {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+#product .container .product-wrapper .product .product-wrap .product-item p:first-child {
+  margin: 10px 0;
+}
+#product .container .product-wrapper .product .product-wrap .product-item p:nth-child(2) {
+  font-size: 14px;
+  font-weight: 400;
+}
+#product .container .product-wrapper .product .product-wrap .product-item p a {
+  color: #b12322;
+  text-transform: capitalize;
 }
 #product .container .product-wrapper .product .hand-wrap .hand {
   display: flex;
@@ -1006,6 +1020,13 @@ footer ul li a {
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li {
   border-bottom: 1px solid #dbd6d6;
+  transition: 0.3s;
+}
+#product .container .product-wrapper .product .hand-wrap .list-hand li:hover {
+  background-color: #b12322;
+}
+#product .container .product-wrapper .product .hand-wrap .list-hand li:hover a {
+  color: #fff;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li:first-child {
   background-color: #b12322;
