--- a/css/style.scss
+++ b/css/style.scss
@@ -917,18 +917,6 @@ nav{
     margin-bottom: 35px;
     margin-right: 31px;
 }
-.sec-heading::before{
-    content: '';
-    position: absolute;
-    left:25%;
-    transform: translateX(-50%);
-    top: 75px;
-    width: 0;
-	height: 0;
-	border-left:8px solid transparent;
-	border-right: 8px solid transparent;
-	border-bottom: 13px solid rgb(199, 194, 194);
-}
 .second-text{
     width: 90%;
     padding: 20px 20px;
@@ -1103,16 +1091,49 @@ footer{
   }
 }
 #product{
-  margin-top: 30px;
+  margin: 30px 0;
   .container{
-    border-top: 3px solid #b12322;
     .product-wrapper{
+      border-top: 3px solid #b12322;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      border-left: 1px solid rgb(219, 214, 214);
+      border-bottom: 1px solid rgb(219, 214, 214);
+      border-right: 1px solid rgb(219, 214, 214);
       .product{
         border: 1px solid rgb(219, 214, 214);
         width: 19%;
+        .product-wrap{
+          a{
+            width:200px;
+            height: 240px;
+            margin-bottom: 14px;
+            img{
+              width:100%;
+              height: 100%;
+            }
+          }
+          .product-item{
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            justify-content: center;
+            p{
+              &:first-child{
+                margin: 10px 0;
+              }
+              &:nth-child(2){
+                font-size: 14px;
+                font-weight: 400;
+              }
+              a{
+                color:#b12322;
+                text-transform: capitalize;
+              }
+            }
+          }
+        }
         .hand-wrap{
           .hand{
             display: flex;
@@ -1140,6 +1161,13 @@ footer{
             padding-left: 0;
             li{
               border-bottom: 1px solid rgb(219, 214, 214);
+              transition: .3s;
+              &:hover{
+                background-color: #b12322;
+                a{
+                color: #fff;
+                }
+              }
               &:first-child{
                 background-color: #b12322;
                 a{
