--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
 
 nav {
   width: 100%;
-  height: 50px;
+  padding: 32px 0;
   background-color: #fbfbfb;
   border-top: 1px solid #e8e8e8;
   border-bottom: 1px solid #e8e8e8;
@@ -58,6 +58,9 @@ nav .navlist {
   justify-content: space-between;
   margin-bottom: 0;
 }
+nav .navlist li:hover a:not(.open a) {
+  color: #00007a;
+}
 nav .navlist li a {
   padding: 16px 0;
 }
@@ -65,7 +68,7 @@ nav .navlist .open {
   position: relative;
 }
 nav .navlist .open > a {
-  background-color: #b12323;
+  background-color: #00007a;
   padding: 16px 14px 15px 16px;
   color: #fff;
 }
@@ -85,7 +88,7 @@ nav .navlist .open .dropdown {
   flex-direction: column;
   position: absolute;
   left: 0;
-  top: 37px;
+  top: 36px;
   opacity: 0;
   visibility: hidden;
   background-color: #fdfbfb;
@@ -94,17 +97,26 @@ nav .navlist .open .dropdown {
   transform-origin: top;
   transition: all 300ms ease-in-out 0s;
   z-index: 1;
+  width: 100%;
 }
 nav .navlist .open .dropdown li {
+  transition: 0.3s;
   width: 100%;
   padding: 0 20px;
-  border-bottom: 1px solid #c7c3c3;
+  border-bottom: 1px solid #404040;
+  width: 100%;
+}
+nav .navlist .open .dropdown li:hover {
+  background-color: #00007a;
+}
+nav .navlist .open .dropdown li:hover a {
+  color: #fff;
 }
 nav .navlist .open .dropdown li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 15px 24px 15px 0;
+  width: 100%;
   color: #030000;
 }
 nav .navlist a {
@@ -117,11 +129,6 @@ nav .navlist a:hover {
   color: #363636;
 }
 
-.fnc {
-  /* you can add color names and their values here
-  and then simply add classes like .m--blend-$colorName to .fnc-slide 
-  to apply specific color for mask blend mode */
-}
 .fnc-slider {
   overflow: hidden;
   box-sizing: border-box;
@@ -137,40 +144,40 @@ nav .navlist a:hover {
   transition: transform 1s 0.6666666667s;
 }
 .fnc-slider .m--blend-dark .fnc-slide__inner {
-  background-color: #8a8a8a;
+  background-color: #a6a6a6;
 }
 .fnc-slider .m--blend-dark .fnc-slide__mask-inner {
-  background-color: #575757;
+  background-color: #737373;
 }
 .fnc-slider .m--navbg-dark {
-  background-color: #575757;
+  background-color: #737373;
 }
 .fnc-slider .m--blend-green .fnc-slide__inner {
-  background-color: #6d9b98;
+  background-color: white;
 }
 .fnc-slider .m--blend-green .fnc-slide__mask-inner {
-  background-color: #42605E;
+  background-color: #ccf2f2;
 }
 .fnc-slider .m--navbg-green {
-  background-color: #42605E;
+  background-color: #ccf2f2;
 }
 .fnc-slider .m--blend-red .fnc-slide__inner {
-  background-color: #ea2329;
+  background-color: #ff99b8;
 }
 .fnc-slider .m--blend-red .fnc-slide__mask-inner {
-  background-color: #990e13;
+  background-color: #ff3371;
 }
 .fnc-slider .m--navbg-red {
-  background-color: #990e13;
+  background-color: #ff3371;
 }
 .fnc-slider .m--blend-blue .fnc-slide__inner {
-  background-color: #59aecb;
+  background-color: #0000e0;
 }
 .fnc-slider .m--blend-blue .fnc-slide__mask-inner {
-  background-color: #2D7791;
+  background-color: #00007a;
 }
 .fnc-slider .m--navbg-blue {
-  background-color: #2D7791;
+  background-color: #00007a;
 }
 .fnc-slide {
   overflow: hidden;
@@ -275,7 +282,7 @@ nav .navlist a:hover {
   overflow: hidden;
   position: relative;
   padding-right: 20px;
-  font-size: 100px;
+  font-size: 35px;
   color: #fff;
   word-spacing: 10px;
 }
@@ -755,7 +762,7 @@ body {
 }
 #second-carousel .sec-about h1 {
   font-size: 30px;
-  color: #B12323;
+  color: #ff004d;
   margin-bottom: 35px;
 }
 #second-carousel .sec-about p {
@@ -767,7 +774,7 @@ body {
   text-align: center;
   padding: 0 0 20px 0;
   font-size: 18px;
-  color: #2c285f;
+  color: #ff004d;
   border-bottom: 2px solid #e8e8e8;
   margin-bottom: 35px;
   margin-right: 31px;
@@ -776,8 +783,8 @@ body {
 .second-text {
   width: 90%;
   padding: 20px 20px;
-  background-color: #241f59;
-  border: 1px solid #241f59;
+  background-color: #00007a;
+  border: 1px solid #00007a;
 }
 
 .second-text p {
@@ -788,13 +795,14 @@ body {
 }
 
 .sec-car .owl-prev {
-  left: 0;
+  left: -7px;
 }
 .sec-car .owl-next {
   right: 25px;
 }
 
 .sec-car.col-lg-6 {
+  margin-top: 40px;
   padding: 0 !important;
 }
 
@@ -802,8 +810,8 @@ body {
   position: absolute;
   width: 30px;
   height: 30px;
-  background-color: #B12323 !important;
-  top: -41%;
+  background-color: #ff004d !important;
+  top: -17%;
   border-radius: 0;
 }
 
@@ -832,139 +840,35 @@ body {
   transition: 0.3s;
 }
 
-#sales {
-  margin: 100px 0;
-}
-#sales .sales-wrapper {
-  padding: 25px;
-  background-color: #e2e2e2;
-  border: 1px solid #1E73BE;
-  border-radius: 5px;
-}
-#sales .sales-wrapper .sales-heading {
-  margin-bottom: 25px;
-}
-#sales .sales-wrapper .sales-heading h5 {
-  text-align: center;
-  font-size: 14px;
-  font-weight: 400;
-  color: #2d2d2d;
-}
-#sales .sales-wrapper .sales-heading h5:nth-child(2) {
-  margin: 14px 0;
-}
-#sales .sales-wrapper .sale-wrap {
-  padding: 20px 0px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-transform: uppercase;
-  justify-content: center;
-  background-color: #fffff7;
-  border-radius: 5px;
-  margin: 0 3px 10px 3px;
-}
-#sales .sales-wrapper .sale-wrap h5 {
-  font-size: 14px;
-  margin-bottom: 14px;
-  color: #246696;
-}
-#sales .sales-wrapper .sale-wrap p {
-  font-size: 20px;
-  color: #156797;
-}
-
 .owl-dots {
   display: flex;
   justify-content: center;
   margin-top: 15px;
 }
 
-#counter {
-  width: 100%;
-  background-color: #125075;
-  padding: 30px 0;
-  margin-top: 40px;
-}
-#counter .counter-wrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-#counter .counter-wrap i {
-  font-size: 48px;
-  color: #74C5FB;
-}
-#counter .counter-wrap h3 {
-  padding: 10px;
-  margin-bottom: 0;
-  color: #fff;
-  font-size: 36px;
-}
-#counter .counter-wrap h4 {
-  color: #DD3333;
-  font-weight: 400;
-}
-
-#call-to-action {
-  width: 100%;
-  background-color: #ccc;
-  padding: 30px;
-  border: 1px dotted #176797;
-}
-#call-to-action .call-wrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-#call-to-action .call-wrapper h1 {
-  color: #176797;
-  font-size: 35px;
-}
-#call-to-action .call-wrapper a {
-  background-color: #b12322;
-  padding: 20px 28px;
-  color: #fff;
-  font-weight: 600;
-  font-size: 18px;
-  text-transform: uppercase;
-  transition: 0.3s;
-}
-#call-to-action .call-wrapper a:hover {
-  background-color: #661613;
-}
-
-footer {
-  width: 100%;
-  background-color: #166797;
-  padding-top: 50px;
-}
-footer ul h5 {
-  color: #fff;
-  margin-bottom: 28px;
-  font-size: 16px;
-}
-footer ul li a {
-  color: #ededed;
-  font-size: 14px;
-  padding: 6px 0;
+#project {
+  margin: 80px 0;
 }
 
 #product {
-  margin: 30px 0;
+  margin-bottom: 80px;
+}
+#product .container .row {
+  padding-left: 0 !important;
+  --bs-gutter-x: 0 !important;
 }
 #product .container .product-wrapper {
-  border-top: 3px solid #b12322;
+  border-top: 3px solid #ff004d;
   display: flex;
+  overflow: hidden;
   justify-content: space-between;
-  border-left: 1px solid #dbd6d6;
-  border-bottom: 1px solid #dbd6d6;
-  border-right: 1px solid #dbd6d6;
+  border-left: 1px dotted #404040;
+  border-bottom: 1px dotted #404040;
+  border-right: 1px dotted #404040;
 }
 #product .container .product-wrapper .product {
-  border: 1px solid #dbd6d6;
-  width: 19%;
+  border: 1px dotted #404040;
+  width: 100%;
 }
 #product .container .product-wrapper .product .product-wrap a {
   width: 200px;
@@ -990,8 +894,12 @@ footer ul li a {
   font-weight: 400;
 }
 #product .container .product-wrapper .product .product-wrap .product-item p a {
-  color: #b12322;
+  color: #ff004d;
   text-transform: capitalize;
+}
+#product .container .product-wrapper .product .hand-wrap {
+  width: 237px;
+  height: 381px;
 }
 #product .container .product-wrapper .product .hand-wrap .hand {
   display: flex;
@@ -1006,11 +914,11 @@ footer ul li a {
   padding: 5px 0;
   width: 44px;
   text-align: center;
-  background-color: #b12322;
+  background-color: #ff004d;
   margin-right: 10px;
 }
 #product .container .product-wrapper .product .hand-wrap .hand p {
-  color: #156797;
+  color: #00007a;
   text-transform: capitalize;
   font-weight: 600;
   margin-bottom: 0;
@@ -1019,17 +927,17 @@ footer ul li a {
   padding-left: 0;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li {
-  border-bottom: 1px solid #dbd6d6;
+  border-bottom: 1px solid #404040;
   transition: 0.3s;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li:hover {
-  background-color: #b12322;
+  background-color: #ff004d;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li:hover a {
   color: #fff;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li:first-child {
-  background-color: #b12322;
+  background-color: #ff004d;
 }
 #product .container .product-wrapper .product .hand-wrap .list-hand li:first-child a {
   color: #fff;
@@ -1038,5 +946,356 @@ footer ul li a {
   display: inline-block;
   font-size: 14px;
   padding: 10px 30px;
-  color: #156797;
+  color: #404040;
+}
+#product .container .product-wrapper .two-carousel .owl-item .item {
+  width: 195px !important;
+  height: 342px !important;
+  margin: 20px;
+}
+#product .container .product-wrapper .two-carousel .owl-item .item .product {
+  width: 100%;
+  height: 100%;
+}
+#product .container .product-wrapper .two-carousel .owl-dots {
+  margin-right: 350px;
+}
+
+#call-to-action {
+  padding: 24px 0;
+  background-color: #f2f3f5;
+}
+
+#call-to-action .call-wrapper {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 32px 30px;
+}
+
+#call-to-action .call-wrapper .row {
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#call-to-action .call-wrapper .wp-info {
+  margin-right: 30px;
+}
+
+#call-to-action .call-wrapper .wp-info h3 {
+  font-size: 26px;
+  margin-bottom: 5px;
+}
+
+#call-to-action .call-wrapper p {
+  margin-bottom: 0;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.custom-btn2 {
+  font-size: 18px;
+  color: #fff;
+  border-radius: 8px;
+  transition: all 0.225s ease 0s;
+  padding: 15px 0;
+  text-align: center;
+  display: block;
+}
+
+#call-to-action .call-wrapper .wp-btn {
+  width: 240px;
+  background-color: #7fd958;
+  -o-box-shadow: 0 20px 30px -18px #7fd958;
+  box-shadow: 0 20px 30px -18px #7fd958;
+  transition: all 0.225s ease 0s;
+}
+
+#call-to-action .call-wrapper .wp-btn:hover {
+  background-color: #53a72f;
+}
+
+.footer {
+  position: relative;
+  margin: -1px 0 0;
+  background: #2f3338;
+}
+
+.footer .container {
+  padding: 55px 0px 40px 0px;
+}
+
+.fotertop {
+  position: relative;
+  margin: -1px 0 0;
+  padding: 34px 0 56px;
+  background: #2f3338;
+  position: relative;
+}
+
+.footer .footerHed {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  letter-spacing: 0.8px;
+  color: white;
+  margin: 0px 0 20px;
+}
+
+.footer .foterwrap .footerlink a {
+  color: #999;
+  display: block;
+  width: 100%;
+}
+
+.footer .foterwrap .footerlink {
+  font-weight: 400;
+  text-transform: none;
+  letter-spacing: 0;
+}
+
+.footer .foterwrap .footerlink a:hover {
+  opacity: 1;
+  color: #fff;
+  text-decoration: none;
+}
+
+.info {
+  line-height: 29px;
+}
+
+.info .phone i, .info .phone a,
+.info .email i, .info .email a,
+.info .location i {
+  padding: 0 5px 5px 0;
+  color: #999;
+}
+
+.info .phone a, .info .email a, .info .location a {
+  font-weight: 400;
+  color: #fff;
+  text-decoration: none;
+}
+
+.info .location a {
+  padding-left: 5px;
+}
+
+.info span {
+  color: #999;
+  display: inline-block;
+  padding: 0px 0 5px 25px;
+  font-size: 14px;
+}
+
+.info {
+  padding: 0 0 0 23px;
+}
+
+.info .col-md-3 {
+  padding: 0 !important;
+}
+
+.footer .footer_middle {
+  margin: 30px 0;
+}
+
+.maxwidth-theme {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 16px;
+  max-width: 1344px;
+  position: relative;
+  width: 100%;
+}
+
+.footer .social-icons {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer .social-icons:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.08);
+}
+
+.footer .social-icons ul {
+  position: relative;
+  display: inline-block;
+  padding: 0 32px;
+  background: #2f3338;
+  z-index: 1;
+}
+
+.social-icons ul {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  font-size: 0;
+}
+
+.social-icons ul li {
+  display: inline-block;
+  vertical-align: top;
+  margin: 4px;
+  padding: 0;
+}
+
+.footer .social-icons ul li.facebook a {
+  background-position: -95px -377px;
+}
+
+.footer .social-icons ul li a {
+  display: block;
+  width: 43px;
+  height: 43px;
+  border-radius: 3px;
+  opacity: 0.5;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: url(../img/sosial.svg) 0 0 no-repeat;
+  transition: opacity 0.3s ease;
+  -moz-transition: opacity 0.3s ease;
+  -ms-transition: opacity 0.3s ease;
+  -o-transition: opacity 0.3s ease;
+  -webkit-transition: opacity 0.3s ease;
+}
+
+.footer .social-icons ul li.twitter a {
+  background-position: -1px -424px;
+}
+
+.footer .social-icons ul li.instagram a {
+  background-position: -142px -518px;
+}
+
+.footer_middle .col-md-12 {
+  padding: 0 !important;
+}
+
+.footer_bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1;
+}
+
+.footer_bottom .okmedia {
+  color: #999;
+  font-size: 13px;
+  padding: 0;
+  text-align: left;
+  margin: 0;
+  width: 17%;
+}
+
+.foterBootom1 {
+  margin-bottom: 0px !important;
+  width: 13%;
+}
+
+.foterBootom1 a {
+  color: #999;
+  font-size: 13px;
+  padding: 0;
+  text-align: right;
+  margin: 0 !important;
+}
+
+.foterBootom1 a:hover {
+  text-decoration: none;
+}
+
+@media (max-width: 1024px) {
+  .footer_bottom .okmedia {
+    width: 27%;
+  }
+
+  .foterBootom1 {
+    width: 20%;
+  }
+}
+@media (max-width: 991px) {
+  .info {
+    padding: 0;
+  }
+
+  .info .phone a, .info .email a, .info .location a {
+    font-size: 14px;
+  }
+
+  .item-views.news_block.portfolio.type_2 .item .info {
+    padding: 0 30px;
+  }
+}
+@media (max-width: 768px) {
+  .footer_bottom .okmedia, .foterBootom1 {
+    width: 100%;
+    text-align: center;
+    padding: 0 0 5px 0;
+  }
+
+  .footer_top .row {
+    width: 100% !important;
+  }
+
+  .footer_bottom {
+    flex-direction: column;
+  }
+
+  .footer_bottom .okmedia, .foterBootom1 {
+    width: 100%;
+    text-align: center;
+    padding: 0 0 5px 0;
+  }
+
+  .item-views.news_block.portfolio.type_2 .item .info {
+    padding: 15px;
+  }
+
+  .footer_bottom .okmedia, .foterBootom1 {
+    width: 100%;
+    text-align: center;
+    padding: 0 0 5px 0;
+  }
+}
+@media (max-width: 576px) {
+  .footer .footer_top {
+    text-align: center;
+  }
+
+  .contact-block {
+    width: 70%;
+    margin: 20px auto;
+  }
+}
+@media (max-width: 425px) {
+  .footer_top {
+    text-align: left;
+  }
+
+  .phone a {
+    font-size: 12px;
+  }
+}
+@media (max-width: 320px) {
+  .footer_bottom .okmedia {
+    width: 100%;
+  }
+
+  .foterBootom1 {
+    padding: 15px 0 0 0;
+  }
+
+  .foterBootom1 {
+    padding: 15px 0 0 0;
+  }
 }/*# sourceMappingURL=style.css.map */
